# PASS

./: Cargo.toml  LICENSE  README.md
daemon/: Cargo.toml
daemon/src/: lib.rs  ll.rs  mem_manager.rs  serve_mem_regions.rs  vmem2pm.rs
daemon/utils/: Cargo.toml
daemon/utils/src/: lib.rs  vm_memory.rs
docs/: PASS_Usage.md
resources/tests/cpu_template_helper/: fingerprint_ARM_NEOVERSE_N1_4.14host.json
src/api_server/src/request/: snapshot.rs
src/firecracker/src/: main.rs
src/utils/: Cargo.toml
src/utils/src/: vm_memory.rs
src/vmm/: Cargo.toml
src/vmm/src/: lib.rs  memory_snapshot.rs  persist.rs  pvm_memory.rs  rpc_interface.rs
src/vmm/src/device_manager/: persist.rs
src/vmm/src/vmm_config/: snapshot.rs
src/vmm/src/vstate/: vm.rs
tests/framework/: properties.py
